--- a/Dockerfile.cuda9
+++ b/Dockerfile.cuda9
@@ -1,4 +1,4 @@
-FROM tensorflow/tensorflow:1.5.0-rc1-devel-gpu
+FROM tensorflow/tensorflow:1.5.0-devel-gpu
 LABEL maintainer="dmitry@kostyaev.me"
 
 RUN apt-get update && apt-get install -y python-opencv
