--- a/Dockerfile.cuda10
+++ b/Dockerfile.cuda10
@@ -3,6 +3,9 @@ LABEL maintainer="dmitry@kostyaev.me"
 
 # pytorch, tensorflow, keras with gpu support
 
+ENV TZ=Europe/Moscow
+RUN ln -snf /usr/share/zoneinfo/$TZ /etc/localtime && echo $TZ > /etc/timezone
+
 RUN apt-get update && apt-get install -y --no-install-recommends --allow-downgrades --allow-change-held-packages \
     build-essential \
     cmake \
