--- a/Dockerfile.cuda10-py3
+++ b/Dockerfile.cuda10-py3
@@ -10,7 +10,7 @@ RUN ln -snf /usr/share/zoneinfo/$TZ /etc/localtime && echo $TZ > /etc/timezone
 RUN apt-get update && apt-get install -y software-properties-common && add-apt-repository ppa:deadsnakes/ppa
 
 # Install python3
-RUN apt-get install -y python3.7 \
+RUN apt-get install -y python3.7-dev \
     python3-pip \
     python3-numpy \
     python3-pip \
