--- a/Dockerfile.cuda10-py3-lab
+++ b/Dockerfile.cuda10-py3-lab
@@ -82,7 +82,8 @@ RUN pip install -U --no-cache-dir \
     matplotlib \
     seaborn \
     Cython \
-    plyfile
+    plyfile \
+    dlib
 
 RUN pip install --no-cache-dir -U numpy matplotlib jupyter
 
