--- a/Dockerfile.cuda10-py3-lab
+++ b/Dockerfile.cuda10-py3-lab
@@ -83,7 +83,8 @@ RUN pip install -U --no-cache-dir \
     seaborn \
     Cython \
     plyfile \
-    dlib
+    dlib \
+    opencv-python
 
 RUN pip install --no-cache-dir -U numpy matplotlib jupyter
 
