--- a/Dockerfile.cuda10-py3-lab
+++ b/Dockerfile.cuda10-py3-lab
@@ -106,9 +106,9 @@ RUN chmod +x /root/run_jupyter.sh
 RUN pip install --no-cache-dir jupyterlab ipywidgets
 
 # Fix tqdm issue: https://github.com/tqdm/tqdm/issues/394
-RUN jupyter nbextension enable --py widgetsnbextension
-RUN curl -sL https://deb.nodesource.com/setup_10.x | -E bash -
-RUN jupyter labextension install @jupyter-widgets/jupyterlab-manager
+#RUN jupyter nbextension enable --py widgetsnbextension
+#RUN curl -sL https://deb.nodesource.com/setup_10.x | -E bash -
+#RUN jupyter labextension install @jupyter-widgets/jupyterlab-manager
 
 
 # Expose Ports for Ipython (8888)
